--- a/app/views/backoffice/config/title/index.html.erb
+++ b/app/views/backoffice/config/title/index.html.erb
@@ -1,6 +1,7 @@
 <div class="page-header">
   <div class="container-fluid">
     <h2 class="h5 no-margin-bottom">Titulos dos Sites</h2>
+    <h3><%= notice %></h3>
   </div>
 </div>
 <div class="container-fluid">
