--- a/app/views/backoffice/product/label/index.html.erb
+++ b/app/views/backoffice/product/label/index.html.erb
@@ -5,6 +5,31 @@
   </div>
 </div>
 <div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="block margin-bottom-sm">
+        <div class="input-group">
+          <input type="text" class="form-control">
+          <div class="input-group-append">
+            <button type="button" class="btn btn-primary">Pesquisar</button>
+          </div>
+        </div>
+      </div>
+     </div>
+   </div>
+</div>
+<div class="container-fluid">
+   <div class="row">
+    <div class="col-lg-12">
+      <div class="block margin-bottom-sm">
+       <%= link_to new_backoffice_product_label_path, class: "btn btn-primary" do %>
+          <i class="fa fa-plus"></i>
+       <% end %>
+      </div>
+     </div>
+   </div>
+</div>
+<div class="container-fluid">
     <div class="row">
       <div class="col-lg-12">
         <div class="block margin-bottom-sm">
@@ -44,11 +69,16 @@
           </div>
         </div>
       </div>
-      <div class="row">
-      	<div style="width: 130px; text-align: center;">
-      	 <%= link_to new_backoffice_product_label_path, class: "btn btn-primary" do %>
-            <i class="fa fa-plus"></i>
-         <% end %>
-        </div>
+   </div>
+</div>
+<div class="container-fluid">
+   <div class="row">
+    <div class="col-lg-12">
+      <div class="block margin-bottom-sm">
+       <%= link_to new_backoffice_product_label_path, class: "btn btn-primary" do %>
+          <i class="fa fa-plus"></i>
+       <% end %>
       </div>
-    </div>
+     </div>
+   </div>
+</div>
