--- a/app/views/backoffice/config/site/edit.html.erb
+++ b/app/views/backoffice/config/site/edit.html.erb
@@ -3,6 +3,20 @@
     <h2 class="h5 no-margin-bottom">Alterar Informações sobre do site</h2>
   </div>
 </div>
+
+<% if @site.errors.any? %>
+    <div class="alert alert-danger alert-dismissable">
+    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+
+    <ul>
+        <% @site.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+        <% end %>
+    </ul>
+
+    </div>
+<% end %>
+
 <div class="col-lg-12">
 	<div class="block">
 	  <div class="block-body">
@@ -19,6 +33,24 @@
 	        <%= t.label "Url", class: "form-control-label" %>
             <%= t.text_field :url, class:"form-control" %>
 	      </div>
+
+	      <div class="form-group">
+            <%= t.label "Usuários disponiveis", class: "form-control-label" %>   
+            <%= t.collection_select( :user_ids, @admins, :id, :name, 
+            {:include_blank=>false}, {:class=> 'form-control mb-3 mb-3'}) %>
+          </div>
+
+	      <div class="form-group row">
+            <label class="col-sm-3 form-control-label">Usuarios disponiveis</label>
+            <div class="col-sm-9 ml-auto">
+              <select multiple="" class="form-control">
+                <option>option 1</option>
+                <option>option 2</option>
+                <option>option 3</option>
+                <option>option 4</option>
+              </select>
+            </div>
+          </div>
 	      <div class="form-group">       
 	        <%= t.submit "Salvar", class: "btn btn-primary" %>
 	      </div>
