--- a/app/views/backoffice/config/title/edit.html.erb
+++ b/app/views/backoffice/config/title/edit.html.erb
@@ -3,6 +3,20 @@
     <h2 class="h5 no-margin-bottom">Alterar Titulos do site</h2>
   </div>
 </div>
+
+<% if @titulo.errors.any? %>
+    <div class="alert alert-danger alert-dismissable">
+    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+
+    <ul>
+        <% @titulo.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+        <% end %>
+    </ul>
+
+    </div>
+<% end %>
+
 <div class="col-lg-12">
 	<div class="block">
 	  <div class="block-body">
