--- a/app/views/backoffice/product/product/new.html.erb
+++ b/app/views/backoffice/product/product/new.html.erb
@@ -21,6 +21,10 @@
 	<div class="block">
 	  <div class="block-body">
 	    <%= form_for @produto, url: backoffice_product_product_index_path do |t| %>
+            <div class="form-group">
+                <%= t.label "Foto do produto", class: "form-control-label" %>
+                <%= t.file_field :photoitem, class:"form-control" %>
+            </div>
 	        <div class="form-group">
                 <%= t.label "Nome", class: "form-control-label" %>
                 <%= t.text_field :name, class:"form-control" %>
