--- a/app/views/backoffice/contact/address/edit.html.erb
+++ b/app/views/backoffice/contact/address/edit.html.erb
@@ -46,7 +46,7 @@
 	            <%= t.text_field :zipcode, class:"form-control" %>
 	        </div>
 	        <div class="form-group" style="display: none">
-            <%= t.text_field :site_id,  :value => current_user.site_id %>
+            <%= t.text_field :site_id,  :value => current_user.site %>
 	        </div>
 		     <!-- <div class="form-group">
 	            <%= t.label "Site", class: "form-control-label" %>   
