--- a/app/assets/stylesheets/backoffice/application.css
+++ b/app/assets/stylesheets/backoffice/application.css
@@ -14,4 +14,5 @@
  *= require backoffice/font-awesome.min
  *= require backoffice/font
  *= require backoffice/style.blue
+ *= require backoffice/checkbox
  */
