--- a/app/views/backoffice/config/about/new.html.erb
+++ b/app/views/backoffice/config/about/new.html.erb
@@ -26,7 +26,7 @@
             <%= t.text_area :description, class:"form-control", rows:"10" %>
 	      </div>
             <div class="form-group" style="display: none">
-            <%= t.text_field :site_id,  :value => current_user.site_id %>
+            <%= t.text_field :site_id,  :value => current_user.site %>
           </div>
          <!-- <div class="form-group">
             <%= t.label "Site", class: "form-control-label" %>   
