--- a/app/views/backoffice/config/title/new.html.erb
+++ b/app/views/backoffice/config/title/new.html.erb
@@ -45,14 +45,7 @@
 	        <%= t.label "Texto Principal", class: "form-control-label" %>
             <%= t.text_area :text, class:"form-control", rows:"5" %>
 	      </div>
-	      <div class="form-group" style="display: none">
-            <%= t.text_field :site_id,  :value => current_user.site_id %>
-	      </div>
-	     <!-- <div class="form-group">
-            <%= t.label "Site", class: "form-control-label" %>   
-            <%= t.collection_select( :site_id, @sites, :id, :name, 
-            {:include_blank=>false}, {:class=> 'form-control mb-3 mb-3'}) %>
-          </div> -->
+	      <%= t.hidden_field :site, :value => current_user.site %>
 	      <div class="form-group">       
 	        <%= t.submit "Salvar", class: "btn btn-primary" %>
 	      </div>
