--- a/app/views/backoffice/product/category/new.html.erb
+++ b/app/views/backoffice/product/category/new.html.erb
@@ -26,7 +26,7 @@
             <%= t.text_field :description, class:"form-control" %>
 	      </div>
           <div class="form-group" style="display: none">
-            <%= t.text_field :site_id,  :value => current_user.site_id %>
+            <%= t.text_field :site_id,  :value => current_user.site %>
           </div>
          <!-- <div class="form-group">
               <%= t.label "Site", class: "form-control-label" %>   
