--- a/app/views/backoffice/product/observation/new.html.erb
+++ b/app/views/backoffice/product/observation/new.html.erb
@@ -32,7 +32,7 @@
 	         </div>
         </div>
         <div class="form-group" style="display: none">
-            <%= t.text_field :site_id,  :value => current_user.site_id %>
+            <%= t.text_field :site_id,  :value => current_user.site %>
         </div>
          <!-- <div class="form-group">
               <%= t.label "Site", class: "form-control-label" %>   
