--- a/app/views/backoffice/product/product/edit.html.erb
+++ b/app/views/backoffice/product/product/edit.html.erb
@@ -48,7 +48,7 @@
             {:include_blank=>true}, {:class=> 'form-control mb-3 mb-3'}) %>
         </div>
         <div class="form-group" style="display: none">
-            <%= t.text_field :site_id,  :value => current_user.site_id %>
+            <%= t.text_field :site_id,  :value => current_user.site %>
           </div>
          <!-- <div class="form-group">
               <%= t.label "Site", class: "form-control-label" %>   
