--- a/app/views/backoffice/config/about/index.html.erb
+++ b/app/views/backoffice/config/about/index.html.erb
@@ -36,11 +36,16 @@
       </div>
     </div>
   </div>
-    <div class="row">
-        <div style="width: 130px; text-align: center;">
-         <%= link_to new_backoffice_config_about_path, class: "btn btn-primary" do %>
-            <i class="fa fa-plus"></i>
-         <% end %>
-        </div>
-      </div>
 </div>
+
+<!--<div class="container-fluid">
+   <div class="row">
+    <div class="col-lg-12">
+      <div class="block margin-bottom-sm">
+       <%= link_to new_backoffice_config_about_path, class: "btn btn-primary" do %>
+          <i class="fa fa-plus"></i>
+       <% end %>
+      </div>
+     </div>
+   </div>
+  </div>-->
