--- a/app/views/backoffice/config/site/new.html.erb
+++ b/app/views/backoffice/config/site/new.html.erb
@@ -1,6 +1,7 @@
 <div class="page-header">
   <div class="container-fluid">
     <h2 class="h5 no-margin-bottom">Novo site</h2>
+    <h3><%= notice %></h3>
   </div>
 </div>
 
@@ -30,8 +31,9 @@
             <%= t.text_area :description, class:"form-control" %>
           </div>
           <div class="form-group">
-            <%= t.label "Url", class: "form-control-label" %>
+            <%= t.label "Subdominio", class: "form-control-label" %>
             <%= t.text_field :url, class:"form-control" %>
+            <span>Ex: edu - Url: edu.lancho.net</span>
         </div>
 	      <div class="form-group">       
 	        <%= t.submit "Salvar", class: "btn btn-primary" %>
