--- a/app/views/backoffice/config/title/index.html.erb
+++ b/app/views/backoffice/config/title/index.html.erb
@@ -48,7 +48,7 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid">
+  <!--<div class="container-fluid">
    <div class="row">
     <div class="col-lg-12">
       <div class="block margin-bottom-sm">
@@ -58,4 +58,4 @@
       </div>
      </div>
    </div>
-  </div>
+  </div>-->
