--- a/app/views/backoffice/config/user/_profile_edit.html.erb
+++ b/app/views/backoffice/config/user/_profile_edit.html.erb
@@ -1,4 +1,4 @@
-<div class="page-header">
+<div class="page-header" id="profile">
   <div class="container-fluid">
     <h2 class="h5 no-margin-bottom">Cadastro dos módulos de acesso</h2>
     <h3><%= notice %></h3>
