--- a/app/views/backoffice/config/user/edit.html.erb
+++ b/app/views/backoffice/config/user/edit.html.erb
@@ -42,7 +42,7 @@
               <%= t.label "Confirmar senha", class: "form-control-label" %>
               <%= t.password_field :password_confirmation, class: "form-control",  required: "required", type: "password" %>
             </div>
-	        <div class="form-group">
+	        <!--<div class="form-group">
 	         <%= t.label "Tipo de acesso", class: "form-control-label" %>
 			 <%= t.collection_radio_buttons(:role, options_for_roles, :id, :description) do |b| %>
 			  <div class="i-checks">
@@ -50,7 +50,7 @@
 			    <%= b.label { b.text } %>
 			  </div>
 			 <% end %>
-			</div>
+			</div>-->
 			<%= t.hidden_field :site, :value => current_user.site %>
 	        <div class="form-group">       
 	         <%= t.submit "Salvar", class: "btn btn-primary" %>
@@ -59,5 +59,6 @@
 	  </div>
 	</div>
 </div>
-
-<%= render partial: "backoffice/config/user/profile_edit" %>
+<% unless (@profiles_admin_set.blank?) %>
+	<%= render partial: "backoffice/config/user/profile_edit" %>
+<% end %>
