--- a/app/views/backoffice/config/user/new.html.erb
+++ b/app/views/backoffice/config/user/new.html.erb
@@ -41,7 +41,7 @@
               <%= t.label "Confirmar senha", class: "form-control-label" %>
               <%= t.password_field :password_confirmation, class: "form-control",  required: "required", type: "password" %>
             </div>
-	        <div class="form-group">
+	        <!--<div class="form-group">
 	         <%= t.label "Tipo de acesso", class: "form-control-label" %>
 			 <%= t.collection_radio_buttons(:role, options_for_roles, :id, :description) do |b| %>
 			  <div class="i-checks">
@@ -49,7 +49,8 @@
 			    <%= b.label { b.text } %>
 			  </div>
 			 <% end %>
-			</div>
+			</div>-->
+			<%= t.hidden_field :role, :value => "restricted_access" %>
 			<%= t.hidden_field :site, :value => current_user.site %>
 	        <div class="form-group">       
 	         <%= t.submit "Salvar", class: "btn btn-primary" %>
