--- a/app/views/backoffice/config/user/_profile_edit.html.erb
+++ b/app/views/backoffice/config/user/_profile_edit.html.erb
@@ -1,17 +1,17 @@
 <div class="page-header" id="profile">
   <div class="container-fluid">
-    <h2 class="h5 no-margin-bottom">Cadastro dos módulos de acesso</h2>
-    <h3><%= notice %></h3>
+    <a data-toggle="collapse" href="#cad-profile-user" class="h5 no-margin-bottom">
+    <i class="fas fa-sliders-h"></i> Clique para alterar o acesso aos módulos</a>
   </div>
 </div>
-
+<div id="cad-profile-user" class="panel-collapse collapse">
 <div class="container-fluid">
     <div class="row">
       <div class="col-lg-12">
         <div class="block margin-bottom-sm">
           <div class="table-responsive"> 
           <%= form_tag edit_backoffice_config_user_path, method: :get do %>
-            <table class="table">
+            <table class="table" id="tblProfile">
               <thead>
                 <tr>
                   <th>#</th>
@@ -38,6 +38,8 @@
                         <input type="checkbox" name="<%= profile.code %>-1" 
                         <%=  profile.route == nil ? "disabled" : "#{profile.create == 1 ? "checked" : ""}" &&
                              profile.code == 2 ? "disabled" : "#{profile.create == 1 ? "checked" : ""}" &&
+                             profile.code == 7 ? "disabled" : "#{profile.create == 1 ? "checked" : ""}" &&
+                             profile.code == 8 ? "disabled" : "#{profile.create == 1 ? "checked" : ""}" &&
                              profile.code == 18 ? "disabled" : "#{profile.create == 1 ? "checked" : ""}" %> >
                         <span class="el-switch-style"></span>
                       </label>
@@ -56,6 +58,8 @@
                         <input type="checkbox" name="<%= profile.code %>-3" 
                         <%=  profile.route == nil ? "disabled" : "#{profile.erase == 1 ? "checked" : ""}" &&
                              profile.code == 2 ? "disabled" : "#{profile.erase == 1 ? "checked" : ""}" &&
+                             profile.code == 7 ? "disabled" : "#{profile.erase == 1 ? "checked" : ""}" &&
+                             profile.code == 8 ? "disabled" : "#{profile.erase == 1 ? "checked" : ""}" &&
                              profile.code == 18 ? "disabled" : "#{profile.erase == 1 ? "checked" : ""}" %> >
                         <span class="el-switch-style"></span>
                       </label>
@@ -72,4 +76,5 @@
         </div>
       </div>
     </div>
+  </div>
   </div>
