--- a/app/views/backoffice/config/user/edit.html.erb
+++ b/app/views/backoffice/config/user/edit.html.erb
@@ -1,10 +1,16 @@
 <div class="page-header">
   <div class="container-fluid">
-    <h2 class="h5 no-margin-bottom">Alterar perfil do Administrador</h2>
-	<h3><%= notice %></h3>
+    <h2 class="h5 no-margin-bottom">Alteração de perfil e acesso do administrador</h2>
+    <h3><%= notice %></h3>
   </div>
 </div>
-
+<div class="page-header">
+  <div class="container-fluid">
+	<a data-toggle="collapse" href="#cad-user" class="h5 no-margin-bottom">
+	<i class="icon-user-1"></i> Clique para alterar o perfil</a>
+  </div>
+</div>
+<div id="cad-user" class="panel-collapse collapse">
 <% if @admin.errors.any? %>
     <div class="alert alert-danger alert-dismissable">
     <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
@@ -42,7 +48,7 @@
               <%= t.label "Confirmar senha", class: "form-control-label" %>
               <%= t.password_field :password_confirmation, class: "form-control",  required: "required", type: "password" %>
             </div>
-	        <!--<div class="form-group">
+	        <div class="form-group">
 	         <%= t.label "Tipo de acesso", class: "form-control-label" %>
 			 <%= t.collection_radio_buttons(:role, options_for_roles, :id, :description) do |b| %>
 			  <div class="i-checks">
@@ -50,7 +56,7 @@
 			    <%= b.label { b.text } %>
 			  </div>
 			 <% end %>
-			</div>-->
+			</div>
 			<%= t.hidden_field :site, :value => current_user.site %>
 	        <div class="form-group">       
 	         <%= t.submit "Salvar", class: "btn btn-primary" %>
@@ -59,6 +65,9 @@
 	  </div>
 	</div>
 </div>
+</div>
 <% unless (@profiles_admin_set.blank?) %>
-	<%= render partial: "backoffice/config/user/profile_edit" %>
+	<% if(current_user.role == "owner") || (current_user.role == "developer") %>
+		<%= render partial: "backoffice/config/user/profile_edit" %>
+	<% end %>
 <% end %>
